[project]
name = "odoo-addons-oca-hr"
version = "17.0.20240820.0"
dependencies = [
    "odoo-addon-hr_course>=17.0dev,<17.1dev",
    "odoo-addon-hr_department_code>=17.0dev,<17.1dev",
    "odoo-addon-hr_employee_calendar_planning>=17.0dev,<17.1dev",
    "odoo-addon-hr_employee_document>=17.0dev,<17.1dev",
    "odoo-addon-hr_employee_firstname>=17.0dev,<17.1dev",
    "odoo-addon-hr_employee_partner_external>=17.0dev,<17.1dev",
    "odoo-addon-hr_employee_second_lastname>=17.0dev,<17.1dev",
    "odoo-addon-hr_holidays_settings>=17.0dev,<17.1dev",
    "odoo-addon-hr_job_category>=17.0dev,<17.1dev",
    "odoo-addon-hr_personal_equipment_request>=17.0dev,<17.1dev",
    "odoo-addon-hr_study>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
